// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppFooter /> Default story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-high"
>
  <div
    class="app-footer__wrapper"
  >
    <div
      class="app-footer__colophon"
    >
      <div
        class="app-footer__title"
      >
        <div
          class="fpo h-[40px] w-[175px]"
        >
          Logo goes here
        </div>
      </div>
    </div>
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> HighEmphasis story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-high"
>
  <div
    class="app-footer__wrapper"
  >
    <div
      class="app-footer__colophon"
    >
      <div
        class="app-footer__title"
      >
        <div
          class="fpo h-[40px] w-[175px]"
        >
          Logo goes here
        </div>
      </div>
      <div
        class="text text--body-xs app-footer__copyright"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> LowEmphasis story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-low"
>
  <div
    class="app-footer__wrapper"
  >
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> WithCopyright story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-high"
>
  <div
    class="app-footer__wrapper"
  >
    <div
      class="app-footer__colophon"
    >
      <div
        class="app-footer__title"
      >
        <div
          class="fpo h-[40px] w-[175px]"
        >
          Logo goes here
        </div>
      </div>
      <div
        class="text text--body-xs app-footer__copyright"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> WithFooterLink story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-high"
>
  <div
    class="app-footer__wrapper"
  >
    <div
      class="app-footer__colophon"
    >
      <a
        aria-label="homepage"
        class="app-footer__home-link"
        href="http://example.org/"
      >
        <div
          class="app-footer__title"
        >
          <div
            class="fpo h-[40px] w-[175px]"
          >
            Logo goes here
          </div>
        </div>
      </a>
      <div
        class="text text--body-xs app-footer__copyright"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> WithTextLogo story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-high"
>
  <div
    class="app-footer__wrapper"
  >
    <div
      class="app-footer__colophon"
    >
      <div
        class="app-footer__title"
      >
        Logo Ipsum, Inc.
      </div>
    </div>
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> WithTextLogoAndCopyright story renders snapshot 1`] = `
<footer
  class="app-footer app-footer--emphasis-high"
>
  <div
    class="app-footer__wrapper"
  >
    <div
      class="app-footer__colophon"
    >
      <a
        class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
        href="http://example.org/"
      >
        Logo Ipsum, Inc.
      </a>
      <div
        class="text text--body-xs app-footer__copyright"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="app-footer__nav-items"
    >
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="app-footer__nav-item"
      >
        <a
          class="link link--context-standalone link--emphasis-low link--size-xs link--variant-inverse"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;
